# hypergen-translation-plugin

./: MANIFEST.in  Makefile  README.rst  requirements-dev.txt  setup.cfg
example_project/: hypergen_translation
example_project/example_project/: settings.py
example_project/hypergen_first_app/: views.py
src/hypergen_translation/: admin.py  api.py  filters.py  models.py  plugins.py
src/hypergen_translation/management/commands/: hypergen_translation_collect.py  hypergen_translation_translate.py
src/hypergen_translation/migrations/: 0001_initial.py  0002_remove_translation_status.py  0003_translation_value.py  0004_delete_translationstatus.py  0005_alter_translation_string.py  0006_alter_translation_string.py
