[metadata]
name = hypergen-translation-plugin
version = 0.1.1
author = Rune Kaagaard
author_email = rumi.kg@gmail.com
description = Translation plugin for Django Hypergen
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/runekaagaard/hypergen-translation-plugin/
project_urls =
    Bug Tracker = https://github.com/runekaagaard/hypergen-translation-plugin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Framework :: Django
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
python_requires = >=3.7